Bug 826961 - Revise SVGPreserveAspectRatio so that the silly cast is not needed. r=longsonr